# splatoon_roulette_bot

./: .gitignore  pyproject.toml
